<resources>
    <string name="app_name">DevelopTools</string>
    <string name="case_Device_info">Device Information</string>
    <string name="case_built_in_sensors">Built-in Sensors</string>
    <string name="case_screen_capture">Screen Capture</string>
    <string name="action_capture">Capture it</string>
    <string name="action_run">Run</string>
    <string name="case_native_commands">Native Command</string>
    <string name="hint_command">/system/bin/ls</string>
    <string name="current_ip">Current IP : %1$s</string>
    <string name="case_wireless_debug">Wireless Debug</string>
    <string name="case_permission_on_device">Permission On Device</string>
    <string name="example_group_name">android.permission.Camera</string>
    <string name="example_permission_name">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="label_sensor_name">Sensor name</string>
    <string name="label_sensor_vendor">Vendor</string>
    <string name="label_sensor_version">Version</string>
    <string name="label_sensor_type">Type</string>
    <string name="label_sensor_max_range">MaxRange</string>
    <string name="label_sensor_resolution">Resolution</string>
    <string name="label_sensor_power">Power</string>
    <string name="label_sensor_min_delay">MinDelay</string>
</resources>
